# AndroidStreaming

Server/Socket Programming/Client/: CMakeLists.txt  Client.cpp  Client.h
Server/Socket Programming/Client/_winBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ClientProj.sln  ClientProj.vcxproj  ClientProj.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Server/Socket Programming/Client/_winBuild/ClientProj.dir/Debug/ClientProj.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ClientProj.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Server/Socket Programming/Client/_winBuild/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
Server/Socket Programming/Server/: CMakeLists.txt  Server.cpp  Server.h
Server/Socket Programming/Server/_winBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ServerProj.sln  ServerProj.vcxproj  ServerProj.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Server/Socket Programming/Server/_winBuild/ServerProj.dir/Debug/ServerProj.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Server/Socket Programming/Server/_winBuild/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.read.1.tlog  (+2 more)
(+17 files in other folders)
